--- a/cucumber/pom.xml
+++ b/cucumber/pom.xml
@@ -73,6 +73,14 @@
 			<artifactId>cucumber-testng</artifactId>
 			<version>7.3.4</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-picocontainer</artifactId>
+			<version>7.3.4</version>
+			<scope>test</scope>
+		</dependency>
 
 
 	</dependencies>
