--- a/TestNg/pom.xml
+++ b/TestNg/pom.xml
@@ -22,6 +22,14 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.2.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.6.0</version>
+    <scope>test</scope>
+</dependency>
+		
   
   </dependencies>
   
